<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:fitsSystemWindows="false"
    tools:context="com.garmin.android.apps.clearshot.phone.activities.MainActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:scaleType="fitStart"
        android:layout_marginTop="0dp"
        android:paddingTop="12dp"
        android:fitsSystemWindows="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/countdown_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:textSize="300sp"
        android:textColor="@android:color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/viewFinder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="20dp"
        android:background="#80000000"
        android:padding="8dp"
        android:text="@string/camera_ready"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/bottom_control_bar"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/bottom_control_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#80000000"
        android:padding="0dp"
        android:gravity="center"
        android:layout_marginBottom="0dp"
        android:elevation="4dp"
        android:translationZ="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/device_title">

        <ImageButton
            android:id="@+id/device_menu_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_info_24"
            app:tint="@android:color/white"
            android:contentDescription="@string/info_description" />

        <ImageButton
            android:id="@+id/settings_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_settings_24"
            app:tint="@android:color/white"
            android:contentDescription="@string/settings_description" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/camera_video_toggle_background"
            android:padding="4dp">

            <View
                android:id="@+id/mode_indicator"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/selected_mode_indicator" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/capture_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_baseline_camera_24"
                    app:tint="@android:color/white"
                    android:scaleX="1.0"
                    android:scaleY="1.0"
                    android:contentDescription="@string/capture_photo_description" />

                <ImageButton
                    android:id="@+id/video_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_baseline_videocam_24"
                    app:tint="@android:color/white"
                    android:scaleX="1.0"
                    android:scaleY="1.0"
                    android:contentDescription="@string/record_video_description" />

            </LinearLayout>
        </FrameLayout>

        <ImageButton
            android:id="@+id/open_watch_app"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:src="@drawable/watch_screentime_35dp"
            app:tint="@android:color/white"
            android:contentDescription="@string/watch_app_description" />

        <ImageButton
            android:id="@+id/camera_flip_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_flip_camera_24"
            app:tint="@android:color/white"
            android:contentDescription="@string/flip_camera_description" />

    </LinearLayout>

    <TextView
        android:id="@+id/device_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:gravity="start"
        android:minHeight="30dp"
        android:textSize="18sp"
        android:background="#CC000000"
        android:padding="8dp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="ClearShot | Device Name" />

</androidx.constraintlayout.widget.ConstraintLayout>